--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.zxing:core:3.5.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.github.getActivity:XXPermissions:20.0'
     implementation 'com.caverock:androidsvg-aar:1.4'
